--- a/readme.org
+++ b/readme.org
@@ -125,7 +125,7 @@ Function ~divides?~ determine does one number divides another.
 
 ** Combinatorics
 
-~product~ functions returns cartesian product of n sequences:
+~product~ functions returns cartesian product of n sequences. For instance,
 
 #+begin_src clojure
   (b/product [(range 1 3) (range 1 5)]) 
@@ -139,7 +139,7 @@ Function ~divides?~ determine does one number divides another.
 
 Similar to addition function ~+~ and multiplication function ~*~ there
 are defined addition modulo m ~m+~ and multiplication modulo m ~m*~
-functions. First argument of these functions is a modulo.
+functions. 
 
 For instance $2 + 4 \equiv 1 \pmod{5}$ in $\mathbf{Z}/m\mathbf{Z}$
 
@@ -161,9 +161,9 @@ and $2 \cdot 4 \equiv 3 \pmod 5$ in $\mathbf{Z}/m\mathbf{Z}$
 : 3
 : 
 
-The fact that a modulo is a first argument allow bind modulo in let
-expression and then use addition and multiplication modulo m without
-specify a modulo.
+First argument of these functions is a modulo. The fact that a modulo
+is a first argument allow bind modulo in let expression and then use
+addition and multiplication modulo m without specify a modulo.
 
 #+begin_src clojure
   (let [m5* (partial b/m* 5)
@@ -237,9 +237,9 @@ $$
 
 ** The greatest common divisor
 
-The greatest common divisor of two integer $a$ and $b$ is an positive
-integer $d$ which divides $a$ and $b$ , and any other common divisor $a$
-and $b$ divides $d$.
+The greatest common divisor of two integers $a$ and $b$, not both
+zero, is the largest positive integer $d$ which divides both $a$ and
+$b$.
 
 #+begin_src clojure
   (b/gcd 12 18)
@@ -250,7 +250,6 @@ and $b$ divides $d$.
 : 
 
 The greatest common divisors of $a$ and $b$ is denoted by $(a,b)$.
-For convenience $(0, 0) = 0$.
 
 Furthermore, for any two integers $a$ and $b$ exists integers $s$
 and $t$ such that $a s + b t = d$ , where $d$ is the greatest common
@@ -266,15 +265,11 @@ divisor. For example, $6 = 12 (-1) + 18 (1)$
 
 ** The least common multiple
 
-The least common multiple of two integers $a$ and $b$ is denoted by
-$[a, b]$, is an smallest integer which is multiple of $a$ and $b$. 
+The least common multiple of two non zero integers $a$ and $b$ is denoted by
+$[a, b]$, is an smallest positive integer which is multiple of $a$ and $b$. 
 It defined in code as follows:
 
-$$[a,b] = \begin{cases}
-\frac{|ab|}{(a,b)} & \quad \text{if } a \ne 0 \text{ and } b \ne 0 \\
-0                  & \quad \text{if } a = 0 \text{ or } b = 0 
-\end{cases}
-$$
+$$[a,b] = \frac{|ab|}{(a,b)}$$
 
 #+begin_src clojure
   (b/lcm 12 18) 
