--- a/readme.org
+++ b/readme.org
@@ -77,11 +77,14 @@ So below I will use above aliases.
 - $\mathbf Z/m\mathbf Z$ - Ring of integers modulo $m$
 - $(a,b)$ - the greatest common divisor of $a$ and $b$
 - $[a,b]$ - the least common multiple of $a$ and $b$
+- $a \mid b$ - $a$ divides $b$
+- $a \nmid b$ - $a$ does not divide $b$
   
 * Some basic functions
 
 This section cover namespace ~vk.ntheory.basic~. It contains some
 common functions, which can be used directly or by other namespaces.
+One can use ~vk.ntheory.basic~ namespace as:
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.basic :as b])
@@ -282,8 +285,8 @@ $$[a,b] = \frac{|ab|}{(a,b)}$$
 * Primes and Integer Factorization 
 
 This section cover namespace ~vk.ntheory.primes~. It primary designed
-for integer factorization and get list of primes. One can use ~primes~
-namespace as:
+for integer factorization and get list of primes. One can use
+~vk.ntheory.primes~ namespace as:
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.primes :as p])
@@ -291,7 +294,7 @@ namespace as:
 
 ** Performance and cache
 
-This library is designed to work with realtive small integers. Library
+This library is designed to work with relatively small integers. Library
 keep in cache least prime divisor table for fast integer
 factorization.  Least prime divisor of an positive integer is least
 divisor, but not ~1~.  Cache grows automatically. The strategy of
@@ -370,7 +373,7 @@ value for index ~1~ is ~1~.
 Integer $p$ is a prime if
 
 - $p > 1$
-- has only divisors $1$ and $p$.  
+- $p$ has just two divisors, namely $1$ and $p$.  
 
 There is ~prime?~ predicate:
 
@@ -384,7 +387,7 @@ There is ~prime?~ predicate:
 
 Integer $n$ is a composite number if
 - $n > 1$
-- has at least one divisor except $1$ and $n$ 
+- $n$ has at least one divisor except $1$ and $n$ 
 
 There is ~composite?~ predicate:
 
@@ -396,7 +399,7 @@ There is ~composite?~ predicate:
 : true
 : 
 
-Integer $1$ is not a prime and is not a composite
+Integer $1$ is not a prime and it is not a composite
 
 
 #+begin_src clojure
@@ -460,7 +463,7 @@ And converse function is:
 : 
 
 2-nd factorization representation is ordered sequence of primes
-splited by partitions by a prime:
+grouped into partitions by a prime:
 
 #+begin_src clojure
   (p/int->factors-partitions 360)
@@ -522,11 +525,12 @@ Conversion function is the same as for 3-rd representation:
 : 360
 : 
 
-Implementation of factorization use least prime divisor
+Implementation of factorization functions use least prime divisor
 table. Actually least prime divisor table is a kind of linked list, to
-get next least prime divisor of an integer ~n~ need just divide ~n~ on
-least prime divisor ~p~, and quotient ~n/p~ is an index of next least
-prime divisor of integer ~n/p~ and therefore divisor ~n~.
+get ordered list of all divisors of an integer ~n~, need to get least
+prime divisor at index ~n~, let it be ~p~, ~p~ is a first element of
+the list, then divide ~n~ on ~p~, the index of quotient ~n/p~ is next
+element of "linked list".
 
 ** Check functions
 
@@ -538,7 +542,7 @@ provides additional set of ~check-*~ functions:
 - ~check-int-non-zero-max~
 
 It is similar to ~vk.ntheory.basic~ check functions, but additionally check
-that given number does not exceeds ~max-int~ constant. And there are some
+that given number does not exceed ~max-int~ constant. And there are some
 more check functions:
   
 - ~check-prime~
@@ -597,7 +601,7 @@ For two functions $f$ an $g$ pointwise addition defined as follows:
 
 $$(f + g)(n) = f(n) + f(n)$$
 
-In clojure function ~f+~ returns pointwise addition:
+In Clojure function ~f+~ returns pointwise addition:
 
 #+begin_src clojure
       (let [f #(* % %)  
@@ -1049,7 +1053,7 @@ identity function, let's denote it as $N(n)$, is $N(n) \cdot \mu(n)$
 : true
 : 
 
-* Conguences
+* Congruences
 
 This section cover namespaces ~vk.ntheory.congruence~. It contains
 functions for solve any congruence with brute force approach and also
@@ -1193,7 +1197,7 @@ fast implementation of sequence reduced residiues.
 
 ** Reduced residues
 
-Function ~reduced-residues~ return reduced resiues modulo m.
+Function ~reduced-residues~ return reduced residues modulo m.
 
 #+begin_src clojure
   (pr/reduced-residues 12)
