--- a/readme.org
+++ b/readme.org
@@ -216,6 +216,7 @@ $2^3 | 24$, but $2^4 \nmid 24$, so $ord_2(24) = 3$
 ** Sign function
 
 The ~sign~ function defined as follows:
+
 $$sign(n) = \begin{cases}
 -1 & \quad \text{if } x < 0 \\
 0  & \quad \text{if } x = 0 \\
@@ -246,9 +247,8 @@ $b$.
 : 
 
 The greatest common divisors of $a$ and $b$ is denoted by $(a,b)$.
-
-Furthermore, for any two integers $a$ and $b$ exists integers $s$
-and $t$ such that $a s + b t = d$ , where $d$ is the greatest common
+Furthermore, for any two integers $a$ and $b$ exists integers $s$ and
+$t$ such that $a s + b t = d$ , where $d$ is the greatest common
 divisor. For example, $6 = 12 (-1) + 18 (1)$
 
 #+begin_src clojure
@@ -264,6 +264,7 @@ divisor. For example, $6 = 12 (-1) + 18 (1)$
 The least common multiple of two non zero integers $a$ and $b$ is denoted by
 $[a, b]$, is an smallest positive integer which is multiple of $a$ and $b$. 
 It defined in code as follows:
+
 $$[a,b] = \frac{|ab|}{(a,b)}$$
 
 #+begin_src clojure
@@ -422,7 +423,6 @@ composite and unit.
 
 Every integer more than $1$ can be represented uniquely as a product
 of primes.
-
 
 \[
 n = {p_1}^{a_1} {p_2}^{a_2} \dots {p_k}^{a_k}
@@ -675,7 +675,7 @@ For instance, we can define function which calculate number of
 divisors of integer ~n~. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ count of divisors of
 number ~n~ can be calculated by formula:
 
-$$ d(n) = \prod_{i=1}^{k} (a_i + 1) $$
+$$d(n) = \prod_{i=1}^{k} (a_i + 1)$$
 
 With helper function it can be defined as
 
@@ -726,11 +726,13 @@ $$\Omega = a_1 + a_2 + \dots + a_k$$
 *** Mobius function - $\mu$.
 
 Mobius function $\mu$ is defined as follows:
+
 $$ \mu(n) = \begin{cases}
 1        &  \quad \text{if } n = 1 \\
 (-1)^k   &  \quad \text{if } n \text{ product of distinct primes} \\
 0        &  \quad \text{otherwise}
 \end{cases} $$
+
 For example, $\mu(6)=\mu(2 \cdot 3)=1$
 
 #+begin_src clojure
@@ -762,10 +764,11 @@ so $\varphi(6) = 2$
 *** Unit function - $\varepsilon$
 
 Unit or identity function defined as follows:
-$$ \varepsilon(n) = \begin{cases}
+
+$$\varepsilon(n) = \begin{cases}
 1,&  \text{if } n = 1 \\
 0,&  \text{if } n > 1
-\end{cases} $$
+\end{cases}$$
 
 #+begin_src clojure
   (af/unit 6)
@@ -795,10 +798,11 @@ $$\mathbf{1}(n) = 1 $$
 
 Function divisors count is a number of positive divisors which divides
 given number $n$.
+
 $$ \sigma_0(n) = \sum_{d|n} 1 $$
+
 Function $\sigma_0(n)$ is often denoted as $d(n)$.  For example,
 number $6$ has $4$ divisors, namely $1,2,3,6$, so $d(6)=4$.
-
 
 #+begin_src clojure
   (af/divisors-count 6)
@@ -829,6 +833,7 @@ For instance, $\sigma(6)= 1 + 2 + 3 + 6 = 12$
 *** Divisors square sum
 
 Function divisors square sum defined as follows:
+
 $$ \sigma_2(n) = \sum_{d | n} d^2 $$
 For instance, $\sigma_2(6) = 1^2 + 2^2 + 3^2 + 6^2 = 50$
 
@@ -843,6 +848,7 @@ For instance, $\sigma_2(6) = 1^2 + 2^2 + 3^2 + 6^2 = 50$
 *** Divisors higher order function - $\sigma_{x}$
 
 In general $\sigma_x$ function is a sum of x-th powers divisors of given n
+
 $$ \sigma_x(n) = \sum_{ d | n} d^x $$
 If $x \ne 0$, $\sigma_x$ can be calculated as follows:
 $$ \sigma_{x}(n) = \prod_{i=1}^{k} \frac {p_i^{x(a_i+1)}} {p_i^x - 1} $$
@@ -900,7 +906,6 @@ If $x > 0$ Chebyshev $\theta$ function is defined as follows:
 
 $$\theta(x) = \sum_{p \le x} \log p$$
 
-
 #+begin_src clojure
   (af/chebyshev-theta 2)
 #+end_src
@@ -939,12 +944,12 @@ For every $f$, which $f(1) \ne 0$ exists inverse function $f^{-1}$
 such that $f * f^{-1} = \varepsilon$. This inverse function called
 Dirichlet inverse and can by calculated recursively by formula:
 
-$$ f^{-1}(n) = \begin{cases}
+$$f^{-1}(n) = \begin{cases}
 \frac{1}{f(1)} & \quad \text{if } n = 1  \\
 \frac{-1}{f(1)}\sum_{ \substack{d | n\\
                                 d < n}} f(\frac{n}{d}) f^{-1}(d)
                & \quad \text{if } n > 1
-\end{cases} $$
+\end{cases}$$
 
 
 In clojure, function ~d*~ calculate Dirichlet convolution:
