--- a/ChangeLog.org
+++ b/ChangeLog.org
@@ -2,6 +2,18 @@
 #+author: Valery Kocubinsky
 #+language: en
 
+* Version 0.7.0
+
+- basic namespace
+  - add check-not-divides function
+  - add check-at-least-one-non-zero
+  - rename check -> check-predicate
+  - remove check-not
+  - add check-true function
+  - gcd arguments require at least one non zero integer
+  - lcm arguments require non zero integers
+  - rewrite divisors function with product  
+
 * Version 0.6.0
 
 - basic namespace
