--- a/readme.org
+++ b/readme.org
@@ -4,67 +4,58 @@
 #+PROPERTY: header-args:clojure :session *clojure-1* :exports both :results pp
 #+LATEX_HEADER: \RequirePackage{fancyvrb}
 #+LATEX_HEADER: \DefineVerbatimEnvironment{verbatim}{Verbatim}{frame=single}
-
-
-
 * About
 
 This project cover some topics in number theory such as integer
 factorization, arithmetic functions, congruences, primitive roots.
-Here defined set of well known arithmetic functions and one can define
-custom arithmetic function. One can solve linear congruence or system
-of linear congruences including case when moduli relatively prime.
 
 I wrote this document with Emacs Org Mode. Then I generate markdown
 file [[./readme.md][readme.md]] with Org Mode export to markdown =C-c C-e m m=, and
 generate pdf file [[./readme.pdf][readme.pdf]] with Org Mode export to pdf =C-c C-e l
-p=.  Github by default render [[./readme.md][readme.md]] in project root if a project
+p=.  Github by default renders [[./readme.md][readme.md]] in project root if a project
 has such file.  Github markdown looks enough good, even math equation
-is supported. However for now math equation doesn't rendered for link
-text. I also generate [[./readme.pdf][readme.pdf]] , pdf file doesn't have any issues
-with math equations.
+is supported. However for now math equation doesn't render for link
+text, pdf file doesn't have any issues with math equations.
 
 I use Emacs babel for clojure to produce real output inside the
 document, so it is live documentation and one can open org file in
 Emacs. I use =org-latex-preview=, to preview math equation inside
 Emacs, to display all image for all fragments need to use prefix
-argument =C-u C-u C-c C-x C-l= for preview all math equations inside
-Emacs.
+argument for =org-latex-preview= function, type =C-u C-u C-c C-x C-l=
+for preview all math equations inside Emacs.
 
 Many applications require integer factorization. Integer factorization
 is relatively expensive procedure. Most straightforward way to
 factorize integer $n$ is try to divide $n$ to numbers $2,3,4, \dots,
-\sqrt{n}$.
-There is some optimization of this procedure. For instance
-exclude from candidates multiple of $2$, or multiple of $2$ and
-multiple of $3$. It is enough good strategy to factorize one
-number. But if need factorize many numbers more fast way to factorize
-number is precalculate table of first $N$ primes and try to divide
-number $n$ to primes $p_1,p_2, \dots, p_n \le \sqrt{n}$.  Table of
-first $N$ primes can be caclulated with Sieve of Eratosthenes. There
-is a way to improve performance of factorization. With slightly
-modified Sieve of Eratosthenes procedure we can precalculate least
-prime divisor table. This table keep least prime divisor for every
-integer up to $N$. This table works as linked list, in fact we know
-all divisors of any number up to $N$ and to factorize integer we need
-just iterate over "linked list" to build output data structure. But
-least prime divisor table require more memory compare to Sieve of
-Eratosthenes.  There is a way to improve performance, it is another
-modification of Sieve of Eratosthenes procedure to build full
-factorization for all numberS $1,2,\dots,N$.  It require much more
-memory for keep table of full factorization and it require more time
-for calculate full factorization table, compare to build least prime
-divisor table.
+\sqrt{n}$. There is some known optimization of this procedure. For
+instance exclude from candidates multiple of $2$, or multiple of $2$
+and multiple of $3$. It is enough good strategy to factorize one
+number. But if need to factorize many numbers more fast way to
+factorize number is precalculate table of first $N$ primes and try to
+divide number $n$ to primes $p_1,p_2, \dots, p_n \le \sqrt{n}$.  Table
+of first $N$ primes can be caclulated with Sieve of
+Eratosthenes. There is a way to improve performance of
+factorization. With slightly modified Sieve of Eratosthenes procedure
+we can precalculate least prime divisor table. This table keep least
+prime divisor for every integer up to $N$. This table may works as
+linked list, in fact we know all divisors of any number up to $N$ and
+to factorize integer we need just iterate over "linked list" to build
+output data structure. But least prime divisor table require more
+memory compare to Sieve of Eratosthenes.  There is a way to improve
+performance again, it is another modification of Sieve of Eratosthenes
+procedure to build full factorization table for all numbers
+$1,2,\dots,N$.  But it require much more memory for keep table of full
+factorization and it require more time for calculate full
+factorization table, compare to build least prime divisor table.
 
 The purpose of this library/tool is to provide fast way to play with
 relatively small numbers(millions) and I made a decision to use least
-prime divisor table as a best compromise between build table time,
-required memory for table, integer factorization time. So now
-factorization is cheap, but it require 4 bytes per number or 4MB
-for 1000000 numbers.
+prime divisor table as the best compromise between build factorization
+table time, required memory for factorization table, integer
+factorization time. So now factorization is relatively cheap, but it
+require 4 bytes per number or 4MB for 1000000 numbers.
 
 In this document I load number theory packages as: 
-
 #+begin_src clojure :results silent
   (require '[vk.ntheory.basic :as b])
   (require '[vk.ntheory.primes :as p])
@@ -73,22 +64,24 @@ In this document I load number theory packages as:
   (require '[vk.ntheory.primitive-roots :as pr])
   (require '[clojure.math :as math])
 #+end_src
-
 So below I will use above aliases.
 
 * Notation
 
-- $\mathbf N$ - Natural numbers, positive integers $1,2,3,\dots$
+- $\mathbf N$ - Natural numbers or positive integers $1,2,3,\dots$
 - $\mathbf C$ - Complex numbers
 - $\mathbf Z$ - Integers $\dots -3, -2, -1, 0, 1, 2, 3, \dots$
 - $\mathbf Z/m\mathbf Z$ - Ring of integers modulo $m$
 - $(a,b)$ - the greatest common divisor of $a$ and $b$
 - $[a,b]$ - the least common multiple of $a$ and $b$
+- $a \mid b$ - $a$ divides $b$
+- $a \nmid b$ - $a$ does not divide $b$
   
 * Some basic functions
 
 This section cover namespace ~vk.ntheory.basic~. It contains some
 common functions, which can be used directly or by other namespaces.
+One can use ~vk.ntheory.basic~ namespace as:
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.basic :as b])
@@ -105,13 +98,18 @@ user input:
 - ~check-int-non-zero~
 
 All of above accept one argument, check does argument satisfy to
-expectation, if does return argument, otherwise throw an exception.
+expectation, if does return argument, otherwise throws an exception.
 
-Some check functions accept more than one argument. For instance
-function ~check-relatively-prime~ accepts 2 arguments.
+Some check functions accept more than one argument. Those function just
+throw an exception if expectation failed and return ~nil~ otherwise:
 
-There are also two helper function ~check~ and ~check-not~ which helps
-to implement another ~check-*~ function for some predicate. 
+- ~check-relatively-prime~
+- ~check-not-divides~
+- ~check-at-least-one-non-zero~
+
+There are also two helper function ~check-true~ and ~check-predicate~
+which helps to implement another ~check-*~ function for some
+predicate.
 
 ** Some predicates
 
@@ -127,7 +125,7 @@ Function ~divides?~ determine does one number divides another.
 
 ** Combinatorics
 
-~product~ functions returns cartesian product of n sequences:
+~product~ function returns cartesian product of n sequences. For instance,
 
 #+begin_src clojure
   (b/product [(range 1 3) (range 1 5)]) 
@@ -141,9 +139,8 @@ Function ~divides?~ determine does one number divides another.
 
 Similar to addition function ~+~ and multiplication function ~*~ there
 are defined addition modulo m ~m+~ and multiplication modulo m ~m*~
-functions. First argument of these functions is a modulo.
-
-For instance $2 + 4 \equiv 1 \pmod{5}$ in $\mathbf{Z}/m\mathbf{Z}$
+functions. For instance $2 + 4 \equiv 1 \pmod{5}$ in
+$\mathbf{Z}/m\mathbf{Z}$
 
 #+begin_src clojure
   (b/m+ 5 2 4)
@@ -152,9 +149,8 @@ For instance $2 + 4 \equiv 1 \pmod{5}$ in $\mathbf{Z}/m\mathbf{Z}$
 #+RESULTS:
 : 1
 : 
-
+#+LATEX:\noindent
 and $2 \cdot 4 \equiv 3 \pmod 5$ in $\mathbf{Z}/m\mathbf{Z}$
-
 #+begin_src clojure
   (b/m* 5 2 4)
 #+end_src
@@ -163,9 +159,9 @@ and $2 \cdot 4 \equiv 3 \pmod 5$ in $\mathbf{Z}/m\mathbf{Z}$
 : 3
 : 
 
-The fact that a modulo is a first argument allow bind modulo in let
-expression and then use addition and multiplication modulo m without
-specify a modulo.
+First argument of these functions is a modulo. The fact that a modulo
+is a first argument allow bind modulo in let expression and then use
+addition and multiplication modulo m without specify a modulo.
 
 #+begin_src clojure
   (let [m5* (partial b/m* 5)
@@ -180,9 +176,8 @@ specify a modulo.
 
 There is another helpful function modulo m - exponentiation. It is a
 fast binary exponentiation algorithm described in D.Knuth, The Art of
-Computer Programming, Volume II.
-
-For instance, $101^{900} \equiv 701 \pmod{997}$
+Computer Programming, Volume II. For instance, $101^{900} \equiv 701
+\pmod{997}$.
 
 #+begin_src clojure
   (b/m** 997 101 900)
@@ -239,9 +234,9 @@ $$
 
 ** The greatest common divisor
 
-The greatest common divisor of two integer $a$ and $b$ is an positive
-integer $d$ which divides $a$ and $b$ , and any other common divisor $a$
-and $b$ divides $d$.
+The greatest common divisor of two integers $a$ and $b$, not both
+zero, is the largest positive integer $d$ which divides both $a$ and
+$b$.
 
 #+begin_src clojure
   (b/gcd 12 18)
@@ -252,10 +247,8 @@ and $b$ divides $d$.
 : 
 
 The greatest common divisors of $a$ and $b$ is denoted by $(a,b)$.
-For convenience $(0, 0) = 0$.
-
-Furthermore, for any two integers $a$ and $b$ exists integers $s$
-and $t$ such that $a s + b t = d$ , where $d$ is the greatest common
+Furthermore, for any two integers $a$ and $b$ exists integers $s$ and
+$t$ such that $a s + b t = d$ , where $d$ is the greatest common
 divisor. For example, $6 = 12 (-1) + 18 (1)$
 
 #+begin_src clojure
@@ -268,15 +261,11 @@ divisor. For example, $6 = 12 (-1) + 18 (1)$
 
 ** The least common multiple
 
-The least common multiple of two integers $a$ and $b$ is denoted by
-$[a, b]$, is an smallest integer which is multiple of $a$ and $b$. 
+The least common multiple of two non zero integers $a$ and $b$ is denoted by
+$[a, b]$, is an smallest positive integer which is multiple of $a$ and $b$. 
 It defined in code as follows:
 
-$$[a,b] = \begin{cases}
-\frac{|ab|}{(a,b)} & \quad \text{if } a \ne 0 \text{ and } b \ne 0 \\
-0                  & \quad \text{if } a = 0 \text{ or } b = 0 
-\end{cases}
-$$
+$$[a,b] = \frac{|ab|}{(a,b)}$$
 
 #+begin_src clojure
   (b/lcm 12 18) 
@@ -286,19 +275,35 @@ $$
 : 36
 : 
 
-* Primes and Integer Factorization 
+* Primes and integer factorization 
 
 This section cover namespace ~vk.ntheory.primes~. It primary designed
-for integer factorization and get list of primes. One can use ~primes~
-namespace as:
+for integer factorization and get list of primes. One can use
+~vk.ntheory.primes~ namespace as:
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.primes :as p])
 #+end_src
 
+** Check functions
+
+Addition to ~vk.nthery.basic~ namespace, namespace ~vk.ntheory.primes~
+provides additional set of ~check-*~ functions:
+
+- ~check-int-pos-max~
+- ~check-int-non-neg-max~
+- ~check-int-non-zero-max~
+
+It is similar to ~vk.ntheory.basic~ check functions, but additionally check
+that given number does not exceed ~max-int~ constant. And there are some
+more check functions:
+  
+- ~check-prime~
+- ~check-odd-prime~      
+
 ** Performance and cache
 
-This library is designed to work with realtive small integers. Library
+This library is designed to work with relatively small integers. Library
 keep in cache least prime divisor table for fast integer
 factorization.  Least prime divisor of an positive integer is least
 divisor, but not ~1~.  Cache grows automatically. The strategy of
@@ -377,7 +382,7 @@ value for index ~1~ is ~1~.
 Integer $p$ is a prime if
 
 - $p > 1$
-- has only divisors $1$ and $p$.  
+- $p$ has just two divisors, namely $1$ and $p$.  
 
 There is ~prime?~ predicate:
 
@@ -391,7 +396,7 @@ There is ~prime?~ predicate:
 
 Integer $n$ is a composite number if
 - $n > 1$
-- has at least one divisor except $1$ and $n$ 
+- $n$ has at least one divisor except $1$ and $n$ 
 
 There is ~composite?~ predicate:
 
@@ -403,8 +408,7 @@ There is ~composite?~ predicate:
 : true
 : 
 
-Integer $1$ is not a prime and is not a composite
-
+Integer $1$ is not a prime and it is not a composite
 
 #+begin_src clojure
   (p/unit? 1)
@@ -420,31 +424,26 @@ composite and unit.
 Every integer more than $1$ can be represented uniquely as a product
 of primes.
 
-
-\[
-n = {p_1}^{a_1} {p_2}^{a_2} \dots {p_k}^{a_k}
-\]
+$$n = {p_1}^{a_1} {p_2}^{a_2} \dots {p_k}^{a_k}$$
 
 or we can write it in more compact form:
 
-\[
-n = \prod_{i=1}^{k} {p_i}^{a_i}
-\]
+$$n = \prod_{i=1}^{k} {p_i}^{a_i}$$
 
 or even write as:
 
 $$n = \prod_{p|n} p^a$$
 
-
-If we accept that empty product is $1$ we can say that every natural
-number can be represent uniquely as a product of primes. For example
-$360 = 2^3 3^2 5^1$.
+For example, $360 = 2^3 3^2 5^1$.
 
 There are some functions to factorize integers. Each of them accept
 natural number as an argument and returns factorized value. It have
 slightly different output, which may be more appropriate to different
 use cases. For each factorize function there is also inverse function,
-which accept factorized value and convert it back to integer.
+which accept factorized value and convert it back to integer. It is
+convenient to consider empty product as $1$. All factorization
+functions below returns corresponded empty data structure for argument
+$1$.
 
 1-st factorization representation is ordered sequence of primes:
 
@@ -467,7 +466,7 @@ And converse function is:
 : 
 
 2-nd factorization representation is ordered sequence of primes
-splited by partitions by a prime:
+grouped into partitions by a prime:
 
 #+begin_src clojure
   (p/int->factors-partitions 360)
@@ -529,29 +528,14 @@ Conversion function is the same as for 3-rd representation:
 : 360
 : 
 
-Implementation of factorization use least prime divisor
+Implementation of factorization functions use least prime divisor
 table. Actually least prime divisor table is a kind of linked list, to
-get next least prime divisor of an integer ~n~ need just divide ~n~ on
-least prime divisor ~p~, and quotient ~n/p~ is an index of next least
-prime divisor of integer ~n/p~ and therefore divisor ~n~.
+get ordered list of all divisors of an integer ~n~, need to get least
+prime divisor at index ~n~, let it be ~p~, ~p~ is a first element of
+the list, then divide ~n~ on ~p~, the index of quotient ~n/p~ is next
+element of "linked list". 
 
-** Check functions
-
-Addition to ~vk.nthery.basic~ namespace, namespace ~vk.ntheory.primes~
-provides additional set of ~check-*~ functions:
-
-- ~check-int-pos-max~
-- ~check-int-non-neg-max~
-- ~check-int-non-zero-max~
-
-It is similar to ~vk.ntheory.basic~ check functions, but additionally check
-that given number does not exceeds ~max-int~ constant. And there are some
-more check functions:
-  
-- ~check-prime~
-- ~check-odd-prime~      
-
-* Arithmetical functions ~vk.ntheory.arithmetic-functions~
+* Arithmetical functions 
 
 This section cover namespace ~vk.ntheory.primes~. It contains some
 well known arithmetical functions and also functions which allow build
@@ -604,7 +588,7 @@ For two functions $f$ an $g$ pointwise addition defined as follows:
 
 $$(f + g)(n) = f(n) + f(n)$$
 
-In clojure function ~f+~ returns pointwise addition:
+In Clojure function ~f+~ returns pointwise addition:
 
 #+begin_src clojure
       (let [f #(* % %)  
@@ -650,12 +634,11 @@ is unordered.
 : (1 2 3 6 5 10 15 30)
 : 
 
-
 ** Additive functions
 
 Additive function is a function for which
 
-$$ f(mn) = f(m) + f(n)$$
+$$f(mn) = f(m) + f(n)$$
 
 if $m$ relatively prime to $n$. If above equality holds for all
 natural $m$ and $n$ function called completely additive.
@@ -664,14 +647,14 @@ To define an additive function it is enough to define how to
 calculate a function on power of primes.
 If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ then: 
 
-$$ f(n) = \sum_{i=1}^{k} f({p_i}^{a_i}) $$
+$$f(n) = \sum_{i=1}^{k} f({p_i}^{a_i})$$
 
 ** Multiplicative functions
 
 Multiplicative function is a function not equal to zero for all n
-for which 
+for which
 
-$$ f(mn) = f(m)f(n) $$
+$$f(mn) = f(m)f(n)$$
 
 if $m$ relatively prime to $n$. If above equality holds for all
 natural $m$ and $n$ function called completely multiplicative.
@@ -680,7 +663,7 @@ To define multiplicative function it is enough to define how to
 calculate a function on power of primes. If $n = p_1^{a_1} p_2^{a_2}
 \dots p_k^{a_k}$ then:
 
-$$ f(n) = \prod_{i=1}^{k} f({p_i}^{a_i}) $$
+$$f(n) = \prod_{i=1}^{k} f({p_i}^{a_i})$$
 
 ** Higher order function for define multiplicative and additive functions
 
@@ -696,7 +679,7 @@ For instance, we can define function which calculate number of
 divisors of integer ~n~. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ count of divisors of
 number ~n~ can be calculated by formula:
 
-$$ d(n) = \prod_{i=1}^{k} (a_i + 1) $$
+$$d(n) = \prod_{i=1}^{k} (a_i + 1)$$
 
 With helper function it can be defined as
 
@@ -748,12 +731,11 @@ $$\Omega = a_1 + a_2 + \dots + a_k$$
 
 Mobius function $\mu$ is defined as follows:
 
-
-$$ \mu(n) = \begin{cases}
+$$\mu(n) = \begin{cases}
 1        &  \quad \text{if } n = 1 \\
 (-1)^k   &  \quad \text{if } n \text{ product of distinct primes} \\
 0        &  \quad \text{otherwise}
-\end{cases} $$
+\end{cases}$$
 
 For example, $\mu(6)=\mu(2 \cdot 3)=1$
 
@@ -770,7 +752,7 @@ For example, $\mu(6)=\mu(2 \cdot 3)=1$
 Euler totient function $\varphi(n)$ is a number of positive integers not exceeding
 $n$ which are relatively prime to $n$. It can be calculated as follows:
 
-$$ \varphi(n) = \prod_{p|n} (p^a - p^{a-1}) $$
+$$\varphi(n) = \prod_{p|n} (p^a - p^{a-1})$$
 
 For example, count of numbers relative prime to $6$ are $1$ and $5$,
 so $\varphi(6) = 2$
@@ -787,10 +769,10 @@ so $\varphi(6) = 2$
 
 Unit or identity function defined as follows:
 
-$$ \varepsilon(n) = \begin{cases}
+$$\varepsilon(n) = \begin{cases}
 1,&  \text{if } n = 1 \\
 0,&  \text{if } n > 1
-\end{cases} $$
+\end{cases}$$
 
 #+begin_src clojure
   (af/unit 6)
@@ -806,8 +788,7 @@ The name ~unit~ was chosen to make it different from
 *** Constant one function - $\mathbf{1}$
 
 Constant one function $\mathbf{1}(n)$ defiened as follows:
-
-$$\mathbf{1}(n) = 1 $$
+$$\mathbf{1}(n) = 1$$
 
 #+begin_src clojure
   (af/one 6)
@@ -822,11 +803,10 @@ $$\mathbf{1}(n) = 1 $$
 Function divisors count is a number of positive divisors which divides
 given number $n$.
 
-$$ \sigma_0(n) = \sum_{d|n} 1 $$
+$$\sigma_0(n) = \sum_{d|n} 1$$
 
 Function $\sigma_0(n)$ is often denoted as $d(n)$.  For example,
 number $6$ has $4$ divisors, namely $1,2,3,6$, so $d(6)=4$.
-
 
 #+begin_src clojure
   (af/divisors-count 6)
@@ -841,7 +821,7 @@ number $6$ has $4$ divisors, namely $1,2,3,6$, so $d(6)=4$.
 Function divisors sum is sum of positive divisors which divides given
 number $n$
 
-$$ \sigma_1(n) = \sum_{d | n} d $$
+$$\sigma_1(n) = \sum_{d | n} d$$
 
 Function $\sigma_1$ is often denoted as $\sigma$.
 For instance, $\sigma(6)= 1 + 2 + 3 + 6 = 12$
@@ -858,7 +838,7 @@ For instance, $\sigma(6)= 1 + 2 + 3 + 6 = 12$
 
 Function divisors square sum defined as follows:
 
-$$ \sigma_2(n) = \sum_{d | n} d^2 $$
+$$\sigma_2(n) = \sum_{d | n} d^2$$
 
 For instance, $\sigma_2(6) = 1^2 + 2^2 + 3^2 + 6^2 = 50$
 
@@ -874,15 +854,15 @@ For instance, $\sigma_2(6) = 1^2 + 2^2 + 3^2 + 6^2 = 50$
 
 In general $\sigma_x$ function is a sum of x-th powers divisors of given n
 
-$$ \sigma_x(n) = \sum_{ d | n} d^x $$
+$$\sigma_x(n) = \sum_{ d | n} d^x$$
 
 If $x \ne 0$, $\sigma_x$ can be calculated as follows:
 
-$$ \sigma_{x}(n) = \prod_{i=1}^{k} \frac {p_i^{x(a_i+1)}} {p_i^x - 1} $$
+$$\sigma_{x}(n) = \prod_{i=1}^{k} \frac {p_i^{x(a_i+1)}} {p_i^x - 1}$$
 
 and if $x = 0$ as follows:
 
-$$ \sigma_{0}(n) = \prod_{i=1}^{k} (a_i + 1) $$
+$$\sigma_{0}(n) = \prod_{i=1}^{k} (a_i + 1)$$
 
 There is higher order function ~divisors-sum-x~ which
 accept ~x~ and return appropriate function.
@@ -938,7 +918,6 @@ If $x > 0$ Chebyshev $\theta$ function is defined as follows:
 
 $$\theta(x) = \sum_{p \le x} \log p$$
 
-
 #+begin_src clojure
   (af/chebyshev-theta 2)
 #+end_src
@@ -950,8 +929,6 @@ $$\theta(x) = \sum_{p \le x} \log p$$
 If $x > 0$ Chebyshev $\psi$ function is defined as follows:
 
 $$\psi = \sum_{n \le x} {\Lambda(n)} $$
-
-
   
 #+begin_src clojure
   (af/chebyshev-psi 2)
@@ -966,30 +943,29 @@ $$\psi = \sum_{n \le x} {\Lambda(n)} $$
 For two arithmetic functions $f$ and $g$ Dirichlet convolution is a
 new arithmetic function defined as follows:
 
-$$ (f*g)(n) = \sum_{d | n} f(d)g(\frac{n}{d}) $$
+$$(f*g)(n) = \sum_{d | n} f(d)g(\frac{n}{d})$$
 
 Dirichlet convolution is associative:
-
-$$ (f * g) * h = f * (g * h) $$
+$$(f * g) * h = f * (g * h)$$
 
 Commutative:
 
-$$ f * g = g * f $$
+$$f * g = g * f$$
 
 Has identify:
 
-$$ f * \varepsilon = \varepsilon * f = f $$
+$$f * \varepsilon = \varepsilon * f = f$$
 
 For every $f$, which $f(1) \ne 0$ exists inverse function $f^{-1}$
 such that $f * f^{-1} = \varepsilon$. This inverse function called
 Dirichlet inverse and can by calculated recursively by formula:
 
-$$ f^{-1}(n) = \begin{cases}
+$$f^{-1}(n) = \begin{cases}
 \frac{1}{f(1)} & \quad \text{if } n = 1  \\
 \frac{-1}{f(1)}\sum_{ \substack{d | n\\
                                 d < n}} f(\frac{n}{d}) f^{-1}(d)
                & \quad \text{if } n > 1
-\end{cases} $$
+\end{cases}$$
 
 
 In clojure, function ~d*~ calculate Dirichlet convolution:
@@ -1037,7 +1013,6 @@ and conversely
 : true
 : 
 
-
 Function ~inverse~ defined as recursive function, it may execute
 slow. But inverse of completely multiplicative function $f(n)$ is
 $f(n) \cdot \mu(n)$(usual,pointwise multiplication), for instance inverse of
@@ -1056,7 +1031,7 @@ identity function, let's denote it as $N(n)$, is $N(n) \cdot \mu(n)$
 : true
 : 
 
-* Conguences
+* Congruences
 
 This section cover namespaces ~vk.ntheory.congruence~. It contains
 functions for solve any congruence with brute force approach and also
@@ -1071,9 +1046,7 @@ and system of linear congruences.
 
 If we have a congruence
 
-$$
-f(x) \equiv 0 \pmod{m}
-$$
+$$f(x) \equiv 0 \pmod{m}$$
 
 we can solve it by try all $m$ residue classes modulo $m$.There is
 ~solve~ function for this. It accept two aruments, first argument is a
@@ -1094,9 +1067,7 @@ for example solve congruence $x^2 \equiv 1 \pmod{8}$
 
 Let consider linear congruence
 
-$$
-ax \equiv b \pmod{m}
-$$
+$$ax \equiv b \pmod{m}$$
 
 There is function ~solve-linear~ for solve linear congruence. It accepts
 3 arguments ~a~, ~b~ and ~m~. Let's solve congruence $6x \equiv 3 \pmod{15}$
@@ -1118,8 +1089,7 @@ x & \equiv c_1 \pmod{m_1} \\
 x & \equiv c_2 \pmod{m_2} \\
   & \vdots \\
 x & \equiv c_n \pmod{m_n} \\
-\end{align*}
-$$
+\end{align*}$$
 
 There is a function ~solve-remaindes~ for solve such system. It accepts
 a sequence of pairs $([c_1, m_1],[c_2, m_2],\dots,[c_n, m_n ])$ and returns pair
@@ -1132,8 +1102,7 @@ $$\begin{align*}
 x &\equiv 2  \pmod{7} \\
 x &\equiv 5  \pmod{9} \\
 x &\equiv 11 \pmod{15} \\
-\end{align*}
-$$
+\end{align*}$$
 
 #+begin_src clojure
   (c/solve-remainders [[2 7][5 9][11 15]])
@@ -1154,8 +1123,7 @@ x & \equiv c_1 \pmod{m_1} \\
 x & \equiv c_2 \pmod{m_2} \\
   & \vdots \\
 x & \equiv c_n \pmod{m_n} \\
-\end{align*}
-$$
+\end{align*}$$
 
 and any pair of moduli relatively prime, i.e. $(m_i, m_j) = 1$ if $i
 \ne j$,
@@ -1174,8 +1142,7 @@ $$\begin{align*}
 x &\equiv 6 \pmod{17} \\
 x &\equiv 4 \pmod{11} \\
 x &\equiv -3 \pmod{8} \\
-\end{align*}
-$$
+\end{align*}$$
 
 #+begin_src clojure
   (c/solve-remainders [[6 17][4 11][-3 8]])
@@ -1187,7 +1154,7 @@ $$
 
 So the answer is $125\pmod{1496}$
 
-* Primitive Roots 
+* Primitive roots 
 
 This section cover namespace ~vk.ntheory.primitive-roots~. It
 contains functions for find primitive roots and also contains
@@ -1200,7 +1167,7 @@ fast implementation of sequence reduced residiues.
 
 ** Reduced residues
 
-Function ~reduced-residues return reduced resiues modulo m.
+Function ~reduced-residues~ return reduced residues modulo m.
 
 #+begin_src clojure
   (pr/reduced-residues 12)
@@ -1209,7 +1176,6 @@ Function ~reduced-residues return reduced resiues modulo m.
 #+RESULTS:
 : (7 11 1 5)
 : 
-
 
 ** Order
 
@@ -1228,7 +1194,7 @@ $a^n \equiv 1 \pmod{m}$.
 
 If order $a$ modulo $m$ is equal to $\phi(m)$, $a$ called
 primitive root. Primitive roots exists only for moduli
-$1$,$2$,$4$, $p^a$, $2p^a$. To find any primitive root
+$1,2,4,p^a,2p^a$. To find any primitive root
 
 #+begin_src clojure
   (pr/find-primitive-root 11)
