Minor change in documentation

--- a/readme.org
+++ b/readme.org
@@ -631,7 +631,7 @@ is unordered.
 #+end_src
 
 #+RESULTS[eb92a166694fca9e52907ba5cc3800b132e83a1f]:
-: (1 2 3 6 5 10 15 30)
+: (1 5 3 15 2 10 6 30)
 : 
 
 ** Additive functions
@@ -988,7 +988,7 @@ more than two function as an argument.
 #+end_src
 
 #+RESULTS[13fd6000aaba4122437535d8be6a4d8841038ace]:
-: #function[vk.ntheory.arithmetic-functions/d*/fn--14563]
+: #function[vk.ntheory.arithmetic-functions/d*/fn--5881]
 : 
 
 
@@ -1192,20 +1192,20 @@ $a^n \equiv 1 \pmod{m}$.
 
 ** Primitive root
 
-If order $a$ modulo $m$ is equal to $\phi(m)$, $a$ called
+If order $a$ modulo $m$ is equal to $\varphi(m)$, $a$ called
 primitive root. Primitive roots exists only for moduli
-$1,2,4,p^a,2p^a$. To find any primitive root
+$1,2,4,p^a,2p^a$, where $p$ odd prime. To find any primitive root
+there is fucntion ~find-primitive-root~.
 
 #+begin_src clojure
   (pr/find-primitive-root 11)
 #+end_src
 
 #+RESULTS:
-: odd-prime
 : 2
 : 
 
-There is a predicate to check does given number $a$ is a primitive
+There is a predicate ~primitve-root?~ to check does given number $a$ is a primitive
 root modulo $m$
 
 #+begin_src clojure
@@ -1216,14 +1216,12 @@ root modulo $m$
 : true
 : 
 
-
-To find all primitive roots
+To find all primitive roots there is function ~primitive-roots~.
 
 #+begin_src clojure
   (pr/primitive-roots 11)
 #+end_src
 
 #+RESULTS:
-: odd-prime
 : (7 6 2 8)
 : 
